--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <ul>
         <li><a href="./index.html">Home</a></li>
         <li><a href="./pages/reservas.html">Reservas</a></li>
-        <li><a href="./pages/contacto.html">Contacto</a></li>
+        <li><a href="./pages/contacto.html">Contactos</a></li>
         <li><a href="./pages/nosotros.html">Nosotros</a></li>
         <li><a href="./pages/ubicacion.html">Ubicacion</a></li>
       </ul>
