correccion responsive mapa

--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -62,7 +62,7 @@
   <section class="formulario">
     <form class="formubicacion">
       <h2>Ubicacion</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13627.084804498832!2d-64.5243234!3d-31.3652924!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x51c25a608183b22d!2sLos%20Nogales%20-%20Caba%C3%B1as!5e0!3m2!1ses-419!2sar!4v1647815002990!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13627.084804498832!2d-64.5243234!3d-31.3652924!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x51c25a608183b22d!2sLos%20Nogales%20-%20Caba%C3%B1as!5e0!3m2!1ses-419!2sar!4v1647815002990!5m2!1ses-419!2sar" loading="lazy" class="mapagoogle"></iframe>
         <div class="menudatos">
           <span class="fa fa-phone"></span>3541623459
           <span class="fa fa-envelope-o"></span> losnogalesvcp@gmail.com
