--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -67,8 +71,8 @@
 
   <section class="Grid">
     <div>
-      <h1>Cabañas Los Nogales</h1>
-    <h2>Un lugar tranquilo, cerca de los mejores destinos de Córdoba</h2>
+      <h1 class= "animate__animated animate__fadeInDown">Cabañas Los Nogales</h1>
+    <h2 class= "animate__animated animate__fadeInUp">Un lugar tranquilo, cerca de los mejores destinos de Córdoba</h2>
     </div>
 </header>
 <body class="body">
@@ -131,6 +135,10 @@
           <li>Seguridad</li>
       </ul.punto>
       </div>
+      <script src="js/wow.min.js"></script>
+<script>
+   new WOW().init();
+</script>
 </body>
 <footer>
   <div>
