finalizacion SEO y SAS

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <title>Los Nogales - Cabañas</title>
+    <meta name="description" content="Reserva de cabañas por temporada en Villa Carlos Paz">
+    <meta name="keywords"  content="CABAÑAS, RESERVA, TEMPORADA, CARLOS PAZ, VERANO, RELAX, VACACIONES, CORDOBA">
+
 </head>
 <header>
   <div>
@@ -51,7 +54,7 @@
               <a class="nav-link active" aria-current="page" href="./pages/reservas.html">Reservas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/ubicacion.html">Ubicacion</a>
+              <a class="nav-link" href="./pages/ubicacion.html">Ubicación</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./pages/contacto.html">Contacto</a>
@@ -77,8 +80,8 @@
 </header>
 <body class="body">
   <div>
-    <h3>
-    <a href="./pages/imagenes.html"> Imágenes</a>
+    <h3 class="botonimagen">
+    <a href="./pages/imagenes.html" class="botonimagen"> Galería de Imagenes</a>
     </h3>
   </div>
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
