--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/contacto.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
@@ -24,9 +24,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <title>Contacto</title>
+    <title>Los Nogales - Contactanos</title>
+    <meta name="description" content="Contacto de cabañas por temporada en Villa Carlos Paz">
+    <meta name="keywords"  content="CABAÑAS, RESERVA, TEMPORADA, CARLOS PAZ, VERANO, RELAX, VACACIONES, CORDOBA">
 </head>
-<header>
+<header class="headercontact">
   <div>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="container-fluid">
@@ -59,7 +61,7 @@
     </div>
   <section class="formulario">
     <form class="form">
-        <h2>Contactanos</h2>
+        <h2 class="titulocontact">Contactanos</h2>
         <p type="Nombre:"><input class="imput1" placeholder="Escribi tu nombre aca..."></input></p>
         <p type="Email:"><input class="imput1" placeholder="Asi sabremos donde contactarte..."></input></p>
         <p type="Mensaje"><input class="imput1" placeholder="Lo que quieras decirnos..."></input></p>
@@ -80,7 +82,7 @@
 </body>
 <footer>
   <div>
-    <h4>
+    <h4 class="textofooter">
       <ul class="listafooter">
       <li> Cabañas, Los Pinos 653, Villa Carlos Paz, Córdoba 5152</li>
       <li>3541623459  losnogalesvcp@gmail.com</li>
