--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/nosotros.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
@@ -25,7 +25,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
-    <title>Nosotros</title>
+    <title>Los Nogales - Quienes somos</title>
+    <meta name="description" content="Informacion de cabañas por temporada en Villa Carlos Paz">
+    <meta name="keywords"  content="CABAÑAS, RESERVA, TEMPORADA, CARLOS PAZ, VERANO, RELAX, VACACIONES, CORDOBA">
 </head>
 <header>
   <div>
@@ -59,12 +61,20 @@
     </nav>
     </div>
   <div class="cuerpo">
-      <h2>
-        Nuestra historia
+      <h2 class="titulonosotros">
+        Quienes somos
       </h2>
-    <h3>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate ut fuga enim sit, maiores vitae? Quis commodi et ratione itaque architecto minus quas voluptas alias doloremque, quaerat nam nesciunt aliquid?
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui, ducimus, necessitatibus voluptate voluptatem sed officia ratione alias aliquid ullam facilis soluta blanditiis repellendus! Nulla veniam tenetur, laudantium inventore facere consequatur.
+    <h3 class="cuerponosotros">
+      Los Nogales - Cabañas es un Complejo de cabañas que se encuentra a 10 minutos del Centro de Villa Carlos Paz. Ofrece comodidad y tranquilidad en sus vacaciones, con un aire y paisajes serranos. 
+      <br>
+      Nuestro establecimiento cuenta con tres cabañas para 4 personas, las cuales contienen dentro, un dormitorio con cama de doble plaza, cocina, comedor, baño,y un espacio donde se encuentran dos camas; las cabañas poseen un Deck de madera rustico para que se relaje con un paisaje inigualable. 
+      <br>
+      También contamos con una pileta cercada con vista a las Sierras la cual usted podrá disfrutar en un patio perimetrado de 2,000 metros cuadrados y una huerta donde podrá estar en contacto con la naturaleza pura.
+      Contamos con servicios de Wi-Fi, Televisión LED por Cable, Ventiladores, Cochera cubierta, Asadores individuales, Agua Caliente, AIRE ACONDICIONADO FRIO/ CALOR, Atención y Vigilancia las 24hs. 
+      <br>
+      A  solo 6 km aproximadamente (10 min) del Centro de Carlos Paz y Reloj Cucú, 1.5 km (4 min) de Pekos, Wave Zone, Complejo Nuevos Karting, 4 km (8 min) del Museo de Tractores y pista de Karting Profesional 
+      <br>
+      ¡Te esperamos!
     </h3>
   </div>
   </header>
