--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/reserva.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
@@ -24,9 +24,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <title>Reservas</title>
+    <title>Los Nogales - Reservar</title>
+    <meta name="description" content="Reserva de cabañas por temporada en Villa Carlos Paz">
+    <meta name="keywords"  content="CABAÑAS, RESERVA, TEMPORADA, CARLOS PAZ, VERANO, RELAX, VACACIONES, CORDOBA">
 </head>
-<header>
+<header class="headerreserva">
   <div>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="container-fluid">
@@ -59,7 +61,7 @@
     </div>
     <section class="formulario">
         <form class="formreserva">
-            <h2>Reservar</h2>
+            <h2 class="tituloreserva">Reservar</h2>
             <p type="Nombre:"><input class="imput1"placeholder="Escribi tu nombre aca..."></input></p>
             <p type="Email:"><input class="imput1" placeholder="Asi sabremos donde contactarte..."></input></p>
             <p type="Telefono"><input class="imput1" placeholder="A donde podamos contactarte..."></input></p>
@@ -91,7 +93,7 @@
   </body>
   <footer>
     <div>
-      <h4>
+      <h4 class="textofoot">
       <ul class="listafooter">
         <li> Cabañas, Los Pinos 653, Villa Carlos Paz, Córdoba 5152</li>
         <li>3541623459  losnogalesvcp@gmail.com</li>
