--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/ubicacion.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
@@ -26,9 +26,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <title>Ubicación</title>
+    <title>Los Nogales - Ubicación</title>
+    <meta name="description" content="Ubicacion de cabañas por temporada en Villa Carlos Paz">
+    <meta name="keywords"  content="CABAÑAS, RESERVA, TEMPORADA, CARLOS PAZ, VERANO, RELAX, VACACIONES, CORDOBA">
 </head>
-<header>
+<header class="headermaps">
   <div>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="container-fluid">
@@ -61,7 +63,7 @@
     </div>
   <section class="formulario">
     <form class="formubicacion">
-      <h2>Ubicacion</h2>
+      <h2 class="titulomaps">Ubicacion</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13627.084804498832!2d-64.5243234!3d-31.3652924!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x51c25a608183b22d!2sLos%20Nogales%20-%20Caba%C3%B1as!5e0!3m2!1ses-419!2sar!4v1647815002990!5m2!1ses-419!2sar" loading="lazy" class="mapagoogle"></iframe>
         <div class="menudatos">
           <span class="fa fa-phone"></span>3541623459
