--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -29,7 +29,7 @@
     <meta name="description" content="Informacion de cabañas por temporada en Villa Carlos Paz">
     <meta name="keywords"  content="CABAÑAS, RESERVA, TEMPORADA, CARLOS PAZ, VERANO, RELAX, VACACIONES, CORDOBA">
 </head>
-<header>
+<header class="headernosotros">
   <div>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="container-fluid">
