--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -44,7 +44,7 @@
               <a class="nav-link active" aria-current="page" href="./reservas.html">Reservas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./ubicacion.html">Ubicacion</a>
+              <a class="nav-link" href="./ubicacion.html">Ubicación</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -63,7 +63,7 @@
     </div>
   <section class="formulario">
     <form class="formubicacion">
-      <h2 class="titulomaps">Ubicacion</h2>
+      <h2 class="titulomaps">Ubicación</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13627.084804498832!2d-64.5243234!3d-31.3652924!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x51c25a608183b22d!2sLos%20Nogales%20-%20Caba%C3%B1as!5e0!3m2!1ses-419!2sar!4v1647815002990!5m2!1ses-419!2sar" loading="lazy" class="mapagoogle"></iframe>
         <div class="menudatos">
           <span class="fa fa-phone"></span>3541623459
