--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -42,7 +42,7 @@
               <a class="nav-link active" aria-current="page" href="./reservas.html">Reservas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./ubicacion.html">Ubicacion</a>
+              <a class="nav-link" href="./ubicacion.html">Ubicación</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./contacto.html">Contacto</a>
