--- a/pages/imagenes.html
+++ b/pages/imagenes.html
@@ -60,15 +60,60 @@
       </nav>
       </div>
       <seccion class="grid">
-        <div class="imagen1"> <img src="../Image/seccion-imagenes (1).jpeg" alt="imagen1" width="333px" class="imagenprueba"> </div>
-        <div class="imagen2"> <img src="../Image/seccion-imagenes (2).jpeg" alt="imagen2" width="333px" class="imagenprueba"></div>
-        <div class="imagen3"> <img src="../Image/seccion-imagenes (3).jpeg" alt="imagen3" width="333px" class="imagenprueba"></div>
-        <div class="imagen4"> <img src="../Image/seccion-imagenes (4).jpeg" alt="imagen4" width="333px" class="imagenprueba"></div>
-        <div class="imagen5"> <img src="../Image/seccion-imagenes (5).jpeg" alt="imagen5" width="333px" class="imagenprueba"></div>
-        <div class="imagen6"> <img src="../Image/seccion-imagenes (6).jpeg" alt="imagen6" width="333px" class="imagenprueba"></div>
-        <div class="imagen7"> <img src="../Image/seccion-imagenes (7).jpeg" alt="imagen7" width="333px" class="imagenprueba"></div>
-        <div class="imagen8"> <img src="../Image/seccion-imagenes (8).jpeg" alt="imagen8" width="333px" class="imagenprueba"></div>
-        <div class="imagen8"> <img src="../Image/seccion-imagenes (9).jpeg" alt="imagen9" width="333px" class="imagenprueba"></div>
+        <div class="imagen1">
+          <div class="frente">
+            <h2>Entorno natural</h2>
+            <p>Para relajar y descanzar</p>
+          </div>
+        </div>
+        <div class="imagen2">
+          <div class="frente">
+            <h2>Pileta compartida</h2>
+            <p>Para disfrutar de una excelente tarde</p>
+          </div>
+        </div>
+        <div class="imagen3">
+          <div class="frente">
+            <h2>Vista a las Sierras</h2>
+            <p>Desde terraza privada</p>
+          </div>
+        </div>
+        <div class="imagen4">
+          <div class="frente">
+            <h2>Excelentes paisajes</h2>
+            <p>Aún desde adentro</p>
+          </div>
+        </div>
+        <div class="imagen5">
+          <div class="frente">
+            <h2>Decoración rustica</h2>
+            <p>Con terminaciones en madera maciza</p>
+          </div>
+        </div>
+        <div class="imagen6">
+          <div class="frente">
+            <h2>Cocheras individuales</h2>
+            <p>Semi-cubiertas</p>
+          </div>
+        </div>
+        <div class="imagen7">
+          <div class="frente">
+            <h2>Espacios comunes</h2>
+            <p>Con mantenimiento continuo</p>
+          </div>
+        </div>
+        <div class="imagen8">
+          <div class="frente">
+            <h2>Terminaciones de calidad</h2>
+            <p>Exterior en mandera</p>
+          </div>
+        </div>
+        <div class="imagen9">
+          <div class="frente">
+            <h2>Fauna natural</h2>
+            <p>Que aromatiza tu estadia</p>
+          </div>
+        </div>
     </seccion>
 </header>
 <body>
