--- a/index.html
+++ b/index.html
@@ -120,26 +120,37 @@
       </h3>
     </div>
     <div class="Lista">
-      <ul.punto class="Derecho">
-          <li>TV por Cable</li>
-          <li>Aire Acondicionado</li>
-          <li>Cochera Semicubierta</li>
-      </ul.punto>
-      <ul.punto class="Central">
-          <li>Para 4 o 5 personas</li>
-          <li>Pileta</li>
-          <li>Microondas</li>
-      </ul.punto>
-      <ul.punto class="Izquierdo">
-          <li>Quincho</li>
-          <li>Asadores</li>
-          <li>Seguridad</li>
-      </ul.punto>
-      </div>
-      <script src="js/wow.min.js"></script>
-<script>
-   new WOW().init();
-</script>
+          <div class="card" style="width: 18rem;">
+            <img src="./Image/habitacion2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">
+                <li>Tv por Cable</li>
+                <li>Aire Acondicionado</li>
+                <li>Cochera Semicubierta</li>
+              </p>
+            </div>
+          </div>
+        <div class="card" style="width: 18rem;">
+          <img src="./Image/habitacion.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">
+              <li>Para 4 o 5 personas</li>
+              <li>Habitacion Principal</li>
+              <li>Habitacion Secundaria</li>
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="./Image/instalaciones.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">
+              <li>Amplios ambientes</li>
+              <li>Cocina completa</li>
+              <li>Terraza privada</li>
+            </p>
+          </div>
+        </div>
+    </div>
 </body>
 <footer>
   <div>
