--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -64,7 +64,7 @@
       <h2 class="titulonosotros">
         Quienes somos
       </h2>
-    <h3 class="cuerponosotros">
+    <h3 class="cuerponosotros"> <br>
       Los Nogales - Cabañas es un Complejo de cabañas que se encuentra a 10 minutos del Centro de Villa Carlos Paz. Ofrece comodidad y tranquilidad en sus vacaciones, con un aire y paisajes serranos. 
       <br>
       Nuestro establecimiento cuenta con tres cabañas para 4 personas, las cuales contienen dentro, un dormitorio con cama de doble plaza, cocina, comedor, baño,y un espacio donde se encuentran dos camas; las cabañas poseen un Deck de madera rustico para que se relaje con un paisaje inigualable. 
@@ -75,6 +75,7 @@
       A  solo 6 km aproximadamente (10 min) del Centro de Carlos Paz y Reloj Cucú, 1.5 km (4 min) de Pekos, Wave Zone, Complejo Nuevos Karting, 4 km (8 min) del Museo de Tractores y pista de Karting Profesional 
       <br>
       ¡Te esperamos!
+      <br>
     </h3>
   </div>
   </header>
